fea: add docs in product handler
